<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context="com.boulio.burnedcaloriescalculator.MainActivity">


    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wieght"
        android:id="@+id/wieghtLabel"
        android:paddingLeft="10dp"
        android:layout_marginTop="61dp"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:textColor="#f5e90a" />

    <TextView
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_ran"
        android:id="@+id/milesRanLabel"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/wieghtLabel"
        android:layout_alignLeft="@+id/wieghtLabel"
        android:layout_alignStart="@+id/wieghtLabel" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_burned"
        android:id="@+id/calBurnedLabel"
        android:layout_below="@+id/milesRanLabel"
        android:layout_alignLeft="@+id/milesRanLabel"
        android:layout_alignStart="@+id/milesRanLabel"
        android:layout_marginTop="45dp" />

    <SeekBar
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:max="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/milesRanSeekBar"
        android:layout_alignBottom="@+id/milesRanNumericValueLabel"
        android:progress="0"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/feetSpinner"
        android:layout_toEndOf="@+id/feetSpinner" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/heightLabel"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/calBurnedLabel"
        android:layout_alignStart="@+id/calBurnedLabel" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:id="@+id/bmiLabel"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/inchesSpinner"
        android:layout_alignLeft="@+id/nameLabel"
        android:layout_alignStart="@+id/nameLabel" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/bmiLabel"
        android:layout_alignLeft="@+id/heightLabel"
        android:layout_alignStart="@+id/heightLabel"
        android:layout_marginTop="45dp" />

    <EditText
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wieghtTextField"
        android:text="@string/_110"
        android:layout_alignBottom="@+id/wieghtLabel"
        android:layout_toRightOf="@+id/calBurnedLabel"
        android:layout_toEndOf="@+id/calBurnedLabel"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:inputType="number" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5mi"
        android:id="@+id/milesRanNumericValueLabel"
        android:layout_alignTop="@+id/milesRanLabel"
        android:layout_toLeftOf="@+id/wieghtTextField"
        android:layout_toStartOf="@+id/wieghtTextField" />

    <TextView
        android:textColor="#f5e90a"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_412_5"
        android:id="@+id/caloriesBurnedNumericalLabel"
        android:layout_alignTop="@+id/calBurnedLabel"
        android:layout_alignLeft="@+id/wieghtTextField"
        android:layout_alignStart="@+id/wieghtTextField" />

    <Spinner
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feetSpinner"
        android:spinnerMode="dropdown"
        android:layout_centerVertical="true"
        android:entries="@array/feetSpinner"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <Spinner
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inchesSpinner"
        android:entries="@array/inchesSpinner"
        android:layout_alignTop="@+id/feetSpinner"
        android:layout_alignRight="@+id/caloriesBurnedNumericalLabel"
        android:layout_alignEnd="@+id/caloriesBurnedNumericalLabel"
        android:spinnerMode="dropdown" />

    <TextView
        android:textColor="#f5e90a"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_20"
        android:id="@+id/bmiNumericalLabel"
        android:layout_above="@+id/nameLabel"
        android:layout_alignLeft="@+id/milesRanNumericValueLabel"
        android:layout_alignStart="@+id/milesRanNumericValueLabel" />

    <EditText

        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:layout_alignBottom="@+id/nameLabel"
        android:layout_toRightOf="@+id/milesRanLabel"
        android:layout_toEndOf="@+id/milesRanLabel"
        android:text="@string/name" />

</RelativeLayout>
